fix(player): Removed conditional to create controls on iPhone as well, and added negative `z-index` in Ads container when inactive

--- a/src/css/player.css
+++ b/src/css/player.css
@@ -651,10 +651,13 @@ video:-webkit-media-text-track-display {
     position: absolute;
     top: 0;
     width: 100%;
-    z-index: 1;
+    z-index: -1;
 }
 .om-ads--active {
     overflow: hidden;
+}
+.om-ads--active #om-ads {
+    z-index: 1;
 }
 .om-player[data-fullscreen='true'] #om-ads {
     z-index: 2147483647;
